cleaned up unneccesary css re added hide nav bar behaviour when scrolled content isn't at the top fixed broken chrome transitions fixed scrollbar momentarily showing up on page transition

--- a/react-spa/src/react-components/NavBar/NavBar.css
+++ b/react-spa/src/react-components/NavBar/NavBar.css
@@ -30,10 +30,6 @@
     font-weight: 700;
     user-select: none;
 }
-/* 
-.navBar .paddingElement {
-    height: 58px;
-} */
 
 .navBar .desktop {
     height: 60px;
@@ -44,23 +40,13 @@
 }
 
 .navBar .gradient-wrapper .gradient-1 {
-    /* transition: background 250ms linear; */
     height: 100vh;
-    /* width: 100vw; */
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-}
-.navBar div.links {
-    /* box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); */
-    
-}
-.navBar.hidden-navbar {
-    /* Don't Hide */
-    /* transform: translateY(-60px); */
 }
 
 @media (max-width: 601px) {
@@ -76,16 +62,11 @@
     .navBar .mobile {
         display: inline;
         float: none;
-        /* height: 120px; */
     }
 
     .navBar {
         height: 120px;
     }
-
-    /* .navBar .paddingElement {
-        height: 116px;
-    } */
 
     .navBar.hidden-navbar {
         transform: translateY(-120px);
